# jwt2

./: .gitignore  Cargo.toml  README.md
crates/jwt2/: Cargo.toml  README.md
crates/jwt2-macros/: Cargo.toml
crates/jwt2-macros/src/: lib.rs
crates/jwt2/src/: header.rs  jwt.rs  lib.rs  repr.rs  sign.rs  util.rs
crates/jwt2/src/sign/: NOTE.txt  ecdsa.rs  hmac_sha2.rs  rsa_pkcs1.rs
crates/jwt2/src/sign/ring/: ecdsa.rs
crates/jwt2/src/sign/rustcrypto/: NOTE.txt  ecdsa.rs  hmac_sha2.rs  rsa_pkcs1.rs
crates/jwt2/src/util/: trait_impls.rs  with_keyid.rs
