[package]
name = "jwt2-macros"
version = "0.1.0"
authors = ["tecc <tecc@tecc.me>"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[lib]
proc-macro = true

[dependencies.proc-macro2]
version = "1.0.86"

[dependencies.syn]
version = "2.0.72"

[dependencies.quote]
version = "1.0.36"