[package]
name = "jwt2"
description = """
JSON Web Tokens done right... hopefully.
"""
version = "0.1.0-alpha.0"
authors = ["tecc <tecc@tecc.me>"]
license.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["recommended"]
# The `recommended` feature contains all algorithms that `jwt2` recommends consumers have.
# This may or may not coincide with those RFC 7518 specified as `recommended`, but *will*
# contain those specified as `required`.
recommended = ["hmac-sha2"]

# NOTE: Maybe create features for each algorithm and group them with more features?
#       It might be excessive.

hmac-sha2 = ["dep:hmac", "dep:sha2"]
# This name might be changed sometime since it may not be a good name.
# rsa-pkcs1 = ["dep:rsa", "dep:signature", "dep:sha2"]
# ecdsa = ["dep:ecdsa", "dep:signature", "dep:p256", "dep:p384"] # "dep:p521"

macros = ["dep:jwt2-macros"]

# Will allow for generation of keys.
# This is mostly a utility.
# Note that in some cases rand_core may be included either way (example: the rsa crate)
rand = ["dep:rand_core"]

[dependencies.base64ct]
version = "1.6"
features = ["alloc"]

[dependencies.ecdsa]
version = "0.16.9"
optional = true

[dependencies.hmac]
version = "0.12.1"
optional = true

[dependencies.jwt2-macros]
version = "0.1.0"
path = "../jwt2-macros"
optional = true

# [dependencies.p256]
# version = "0.13.2"
# optional = true

# [dependencies.p384]
# version = "0.13.0"
# optional = true

# Personal note:
# It really bothers me that all of the crates and numbers are consistent until
# this one. It's also just the 2 and 1 swapped!! Why?!
# [dependencies.p521]
# version = "0.13.3"
# optional = true

[dependencies.rand_core]
version = "^0.6"
optional = true

[dependencies.ring]
version = "0.17.8"

# [dependencies.rsa]
# version = "0.9.6"
# optional = true
# features = ["sha2"]

[dependencies.serde]
version = "1"
features = ["derive"]

[dependencies.serde_json]
version = "1"

[dependencies.signature]
version = "^2.2.0"
optional = true

[dependencies.sha2]
version = "0.10.8"
optional = true

[dependencies.thiserror]
version = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]